--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     
-    <h2>i am a new programmer</h2>
+    <div class="heaading-parent">
+        <h2>I am a new programmer</h2>
+    </div>
 
 </body>
 </html>
