--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     
     <div class="heaading-parent">
         <h2>I am a new programmer</h2>
+        <div class="btn-parent">
+            <button class="btn">Hire Me now </button>
+        </div>
     </div>
 
 </body>
